fixed hero buttons on mobile

--- a/src/styles/sass/base.css
+++ b/src/styles/sass/base.css
@@ -174,6 +174,12 @@ a {
     margin: 1rem 1rem;
     transition: all .2s;
     color: white; }
+    @media (max-width: 56.25em) {
+      .hero__button {
+        font-size: 2rem; } }
+    @media (max-width: 37.5em) {
+      .hero__button {
+        font-size: 1rem; } }
     .hero__button:hover {
       background-color: #282430; }
     .hero__button.not-allowed {
@@ -360,6 +366,12 @@ a {
   font-size: 4rem;
   justify-content: center;
   align-items: center; }
+  @media (max-width: 56.25em) {
+    .hero__stats {
+      font-size: 3.5rem; } }
+  @media (max-width: 37.5em) {
+    .hero__stats {
+      font-size: 2.5rem; } }
 
 #hackers, #projects, #hours {
   margin-left: 3rem;
