--- a/src/styles/sass/components/landing/_hero.sass
+++ b/src/styles/sass/components/landing/_hero.sass
@@ -47,7 +47,7 @@
     display: flex
     justify-content: center
     align-items: center
-    flex-wrap: wrap;
+    flex-wrap: wrap
   &__button
     text-decoration: none
     font-size: 2.75rem
@@ -58,6 +58,10 @@
     margin: 1rem 1rem
     transition: all .2s
     color: white
+    @include respond(tab-port)
+      font-size: 2rem
+    @include respond(phone)
+      font-size: 1rem
     &:hover
       background-color: lighten($color-bg, 5%)
     &.not-allowed
@@ -245,8 +249,13 @@
   font-size: 4rem
   justify-content: center
   align-items: center
+  @include respond(tab-port)
+    font-size: 3.5rem
+  @include respond(phone)
+    font-size: 2.5rem
 
 #hackers, #projects, #hours
   margin-left: 3rem
   margin-right: 3rem
   padding: 0rem 0rem 10rem 0rem
+  
